--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
+div.connexion
+{
+  position:absolute;
+  left: 10%;
+  top: 45%;
+  width: 400px;
+  height: 300px;
+  margin-top: -150px;
+}
+
+div.connexion form button[type="submit"]
+{
+  float: right;
+}
+
+div.connexion h2, div.inscription h2
+{
+  margin-bottom: 20px;
+  border-bottom: 1px solid black;
+}
+
+div.inscription
+{
+  position:absolute;
+  left: 55%;
+  top: 45%;
+  width: 500px;
+  height: 300px;
+  margin-top: -150px;
+}
+
+div.inscription form button[type="submit"]
+{
+  float: right;
+}
+
 .nav-link {
 	margin-left : 200px;
 }
@@ -26,27 +62,4 @@
 	margin-left : 10px;
 	width : 20%;
 	height : 20%;
-}
-
-#footer {
-	margin-bottom : 60px;
-}
-
-html {
-  min-height: 100%;
-  overflow-y: hidden;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
-
-.footer, a {
-	text-align:center;
 }
