--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ div.inscription form button[type="submit"]
 	text-align : center!important;
 }
 
-#logo, img {
+#logo img {
 	margin-left : 10px;
 	width : 20%;
 	height : 20%;
