--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,27 @@ div.inscription form button[type="submit"]
 
 #logo img {
 	margin-left : 10px;
-	width : 20%;
-	height : 20%;
+	width : 40%;
+	height : 15%;
 }
+
+#footer {
+	margin-bottom : 60px;
+}
+
+html {
+  min-height: 100%;
+  overflow-y: hidden;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.footer, a {
