--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ div.inscription form button[type="submit"]
 
 html {
   min-height: 100%;
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 
@@ -78,8 +79,8 @@ html {
   bottom: 0px;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  height: 40px;
+  line-height:40px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
 
