--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,26 @@
 	width : 20%;
 	height : 20%;
 }
+
+#footer {
+	margin-bottom : 60px;
+}
+
+html {
+  min-height: 100%;
+  overflow-y: hidden;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.footer, a {
+	text-align:center;
+}
