--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ html {
 }
 
 .footer {
-	position : absolute;
+  position : absolute;
   bottom: 0px;
   width: 100%;
   /* Set the fixed height of the footer here */
@@ -84,4 +84,6 @@ html {
   background-color: #f5f5f5;
 }
 
-.footer, a {
+.footer a {
+	text-align : center;
+}
